--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,12 @@
 html {
+    font-size: 62.5%;
     background-color: #180A05;
 }
 
 body {
     width: 1440px;
     margin: 0 auto;
+    font-size: 1.6rem;
     background-color: #fff;
 }
 
@@ -55,7 +57,7 @@ body {
     position: relative;
     color: #fff;
     font-weight: 400;
-    font-size: 3.75em;
+    font-size: 60px;
     text-align: center;
     top: 50%;
     transform: translateY(-50%);
@@ -136,13 +138,13 @@ body {
 }
 
 .contato h2 {
-    font-size: 2.81em;
+    font-size: 45px;
     font-weight: 600;
     margin-bottom: 30px;
 }
 
 .contato address {
-    font-size: 1.56em;
+    font-size: 25px;
     font-weight: 600;
     margin-bottom: 40px;
 }
