--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    width: 1440px;
+    max-width: 1440px;
     margin: 0 auto;
     font-size: 1.6rem;
     background-color: #fff;
